# imaginr

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
data/config/: comfyui.json
data/db/: images.db
data/dictionary/: keys.yaml  standard.csv
data/snippets/: snippets.yaml
data/templates/: README.md  base.yaml  global_base.yaml  my_shot_01.yaml
docs/: YAPS.md  YAPS_ja.md  manual.md  manual_ja.md  tutorial.md  tutorial_ja.md
ref/: clothing_bottom.txt  clothing_dress.txt  clothing_top.txt  swimwear.txt  underwear_bottom.txt  underwear_top.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: dictionary-context-tree.tsx  dictionary-entry-list.tsx  dictionary-manager-dialog.tsx  dictionary-quick-add-dialog.tsx  file-tree.tsx  generation-panel.tsx  image-gallery.tsx  image-viewer.tsx  preview-panel.tsx  prompt-panel.tsx  settings-dialog.tsx  snippet-panel.tsx  tab-bar.tsx  variable-form.tsx  workflow-editor.tsx  yaml-editor.tsx
src/lib/: comfyui-api.ts  dialog.ts  dictionary-api.ts  dictionary-db-api.ts  file-api.ts  image-api.ts  init-data.ts  key-dictionary-api.ts  monaco-config.ts  ollama-api.ts  preset-api.ts  sample-files.ts  snippet-api.ts  snippets.ts  storage.ts  tauri-utils.ts  variable-utils.ts  yaml-utils.ts  yaps-spec.ts
src/types/: monaco.d.ts
(+148 files in other folders)
