[package]
name = "image-prompt-builder"
version = "0.1.0"
description = "A YAML-based prompt builder for image generation AI"
authors = ["you"]
edition = "2021"

[lib]
name = "image_prompt_builder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
